--- a/themes/hugo-agency-theme/layouts/partials/contact.html
+++ b/themes/hugo-agency-theme/layouts/partials/contact.html
@@ -21,7 +21,7 @@
         <form
           method="POST"
           name="sentMessage"
-          
+          id="contactForm
           {{- if $contact.netlify -}}
             " netlify
           {{- else -}}
